--- a/Styles.css
+++ b/Styles.css
@@ -130,27 +130,26 @@ body {
 .blog {
   /* background-color: #ccc; */
   font-family: "Times New Roman", Times, serif;
-
   width: 95%;
-
   margin-left: auto;
   margin-right: auto;
 }
 
-.bistol {
+/* .bistol {
   text-align: center;
   margin-bottom: 2rem;
-}
-.published {
+} */
+/* .published {
   margin-bottom: 2rem;
   text-align: center;
-}
+} */
 .mb {
   margin-bottom: 1rem;
   color: gray;
 }
 #head {
   margin-bottom: 1rem;
+  font-size: 1.5rem;
 }
 .card-img {
   width: 100%;
@@ -172,26 +171,28 @@ body {
   padding-left: 10rem;
 }
 
-.card-content {
-  padding: 4rem;
-}
-.coffee {
+.right_coffee {
   background-image: url("./asest/coffee.webp");
-  align-items: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 30rem;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: right;
+  display: block;
   border: 3px solid black;
   border-radius: 3px;
 }
-.coffee h4 {
+.icon {
+  width: 50%;
+}
+.left_text {
+  width: 50%;
+  margin-right: 3rem;
+}
+.right_coffee h4 {
   font-size: 2rem;
   text-align: center;
   color: #fff;
-  letter-spacing: 2rem;
+  letter-spacing: 1.5rem;
 }
 .mainicon {
   display: flex;
@@ -218,10 +219,28 @@ body {
   display: flex;
 }
 #three {
-  font-size: 30px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  font-family: Georgia, "Times New Roman", Times, serif;
   letter-spacing: 1px;
+  padding-bottom: 2rem;
+}
+.cardmain {
+  display: flex;
+  /* margin-left: 2rem;
+  margin-right: 2rem; */
+  margin: 4rem;
+  /* width: 100%; */
+}
+#both {
+  /* margin: 2rem; */
+  margin-left: 4rem;
+  font-size: 1.5rem;
+  margin-bottom: 3rem;
+}
+.bo {
+  margin-bottom: 2.5rem;
+  color: gray;
+  margin-left: 4rem;
 }
 
 /* ******************* */
