--- a/Styles.css
+++ b/Styles.css
@@ -120,8 +120,13 @@ body {
     overflow-y: auto;
   }
 }
+@media (max-width: 1036px) {
+  .logo_img {
+    margin-left: 3rem;
+  }
+}
 
-/* **************** */
+/* ****** */
 
 * {
   box-sizing: border-box;
@@ -130,19 +135,12 @@ body {
 .blog {
   /* background-color: #ccc; */
   font-family: "Times New Roman", Times, serif;
-  width: 95%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
+  /* height: 10rem; */
 }
 
-/* .bistol {
-  text-align: center;
-  margin-bottom: 2rem;
-} */
-/* .published {
-  margin-bottom: 2rem;
-  text-align: center;
-} */
 .mb {
   margin-bottom: 1rem;
   color: gray;
@@ -157,18 +155,22 @@ body {
 }
 .image {
   background-image: url("./asest/cup.jpg");
-  align-items: center;
+  /* align-items: center; */
   background-repeat: no-repeat;
   background-size: cover;
-  height: 30rem;
+  height: 25rem;
   width: 100%;
+  padding: 8rem;
 }
 .image h3 {
   color: #ffffff;
   font-size: 5rem;
-  /* padding: 6rem; */
-  padding-top: 10rem;
-  padding-left: 10rem;
+}
+@media (max-width: 492px) {
+  .image {
+    padding: 1rem;
+    padding-top: 8rem;
+  }
 }
 
 .right_coffee {
@@ -192,14 +194,20 @@ body {
   font-size: 2rem;
   text-align: center;
   color: #fff;
-  letter-spacing: 1.5rem;
+  letter-spacing: 1rem;
 }
 .mainicon {
   display: flex;
-  padding: 1rem;
+  /* background-color: antiquewhite; */
+  /* padding: 1rem; */
+  margin-top: 1rem;
 }
 #user {
   display: flex;
+  margin-right: 1rem;
+}
+#user h3 {
+  white-space: nowrap;
 }
 #fa-user {
   margin: 5px;
@@ -208,7 +216,7 @@ body {
 #calender {
   display: flex;
 
-  padding-left: 2rem;
+  /* padding-left: 2rem; */
 }
 #fa-calender {
   margin: 5px;
@@ -217,6 +225,7 @@ body {
 }
 #calender h3 {
   display: flex;
+  white-space: nowrap;
 }
 #three {
   font-size: 40px;
@@ -226,24 +235,54 @@ body {
 }
 .cardmain {
   display: flex;
-  /* margin-left: 2rem;
-  margin-right: 2rem; */
-  margin: 4rem;
-  /* width: 100%; */
+
+  padding: 4rem 4rem 0rem 4rem;
+  /* background-color: aqua; */
 }
 #both {
-  /* margin: 2rem; */
-  margin-left: 4rem;
   font-size: 1.5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 .bo {
   margin-bottom: 2.5rem;
   color: gray;
-  margin-left: 4rem;
+  /* margin-left: 4rem; */
+}
+.variety {
+  /* background-color: antiquewhite; */
+  padding: 4rem;
+}
+/* ******* */
+@media (max-width: 1136px) {
+  .cardmain {
+    flex-direction: column-reverse;
+  }
+  .icon {
+    width: 100%;
+  }
+  .left_text {
+    width: 100%;
+    margin-right: 3rem;
+  }
+}
+@media (max-width: 557px) {
+  .cardmain {
+    padding: 1rem;
+  }
+}
+@media (max-width: 335px) {
+  .mainicon {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media (max-width: 557px) {
+  .variety {
+    padding: 1rem;
+  }
 }
 
-/* ******************* */
+/* ------------------------------------------------------ */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
